--- a/src/app/posts-list/posts-list.component.html
+++ b/src/app/posts-list/posts-list.component.html
@@ -13,4 +13,4 @@
 | en él para notificar los clics sobre los posts.                          |
 |========================================================================-->
 
-<app-post-preview *ngFor="let post of posts" (onAuthorClick)="showAuthorPosts(post.author)" (onClickPost)="showPost(post.id)" [post]="post"></app-post-preview>
+<app-post-preview *ngFor="let post of posts" (onAuthorClick)="showAuthorPosts($event)" (onClickPost)="showPost($event)" [post]="post"></app-post-preview>
